--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome Fools</h1>
-<p>Sign up <%= link_to "today", "#" %> , or tomorrow?</p>
+<div class="jumbotron">
+	<h1>Welcome Fools</h1>
+	<p>Sign up <%= link_to "today", "#", class: "btn btn-danger btn-xs" %> , or tomorrow?</p>
+</div>
