added for about page

--- a/app/assets/stylesheets/bootstarp_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstarp_and_customization.css.scss
@@ -3,5 +3,6 @@ $navbar-inverse-bg: #2ecc71;
 $navbar-inverse-link-color: white;
 $jumbotron-bg:  #e67e22;
 $jumbotron-color:  white;
+$headings-color:  white;
 
 @import 'bootstrap';
