--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
 <h1>About Us</h1>
-<p>One Month Rails Pinteresthack app project!  Gambatte!</P>
+<p>One Month Rails Pinterest-hack app project!  Gambatte!</P>
